# shuttlings-cch24

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  bacon.toml  flake.nix
src/: db.rs  lib.rs  main.rs
src/days/: day_1.rs  day_12.rs  day_16.rs  day_19.rs  day_2.rs  day_23.rs  day_5.rs  day_9.rs  mod.rs
