[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.75.0", features = [
    "oapi",
    "logging",
    "cookie",
], git = "https://github.com/Samyak2/salvo", branch = "fix-deny-unknown" }
shuttle-salvo = { version = "0.49.0", git = "https://github.com/Samyak2/shuttle", branch = "bump-salvo-samyak" }
shuttle-runtime = { version = "0.49.0", git = "https://github.com/Samyak2/shuttle", branch = "bump-salvo-samyak" }
tokio = { version = "1.26.0", features = ["time"] }
serde = "1.0.216"
cargo_toml = "0.21.0"
thiserror = "2.0.9"
rsa = "0.9.7"
rand = "0.8.5"
serde_json = "1.0.134"
jsonwebtoken = "9.3.0"
